# fzf-primitives

./: .gitignore  Ariadne.py  BrotabWindowManager.py  ChromeWindowManager.py  FileBrowser.py  FzGitLog.py  GitDiff.py  ObsidianBrowser.py  README.md  __init__.py  actions.py  composing_functions.py  config.py  load_pickled_function.py  main.py  makefile  possible_previews.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
ChromeWindowManager/: __main__.py  windows.json
composite_functions/: double ∘ double ∘ double ∘ double ∘ double.pkl  subtract 3 ∘ subtract 3 ∘ subtract 3 ∘ double ∘ double.pkl
core/: ActionMenu.py  BasePrompt.py  BasicLoop.py  DefaultActionMenu.py  DefaultMultiselectPrompt.py  DefaultPrompt.py  MyFzfPrompt.py  Prompt.py  __init__.py  exceptions.py  functional_mods.py  hotkeys.py  mods.py  options.py  previews.py  prompt.py
core/FzfPrompt/: ActionMenu.py  Previewer.py  Prompt.py  (+14 more)
extra/: BasePrompt.py  BasicLoop.py  DefaultMultiselectPrompt.py  DefaultPrompt.py  __init__.py  inspector.py  make_server_call.py
menus/: information_menu.hjson  information_menu_2.hjson  input_choices.hjson  personal_state.hjson
tests/: AutomatedTestPrompt.py  LoggingSetup.py  Recording.py  SerializedLoguruEntry.py  TestPrompt.py  test_automator.py  test_available_actions.py  test_available_events.py  test_available_triggers.py  test_binding_operations.py  test_create_app.py  test_fzf_input.py  test_imports.py  test_monitoring.py  test_named_components.py  test_on_event_presets.py  test_on_trigger_presets.py  test_options.py  test_placeholders.py  test_preview.py  test_prompt_automated.py  test_prompt_data.py  test_reloading_choices.py  test_reloading_entries.py  test_repeater.py  test_request.py  test_server.py  test_stream.py  test_transform.py  test_transformation.py  test_user_interface.py
(+184 files in other folders)
