[project]
name = "fzf-primitives"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "honza", email = "hai.linh.ng91@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pyperclip>=1.9.0",
    "requests>=2.32.5",
    "typer>=0.17.3",
]

[project.scripts]
fzf-primitives = "fzf_primitives:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
